Added button images, wireframe and autorotate

--- a/interface.html
+++ b/interface.html
@@ -24,20 +24,37 @@
 <div id="buttonControls">
     <div id="rotateAround">
         <p>Rotate</p>
-        <button id="rotateLeft" type="button" class="btn btn-default">Left</button>
-        <button id="rotateRight" type="button" class="btn btn-default">Right</button>
+        <button id="rotateLeft" type="button" class="btn btn-default"><img src="images/leftArrow.png"></button>
+        <button id="rotateRight" type="button" class="btn btn-default"><img src="images/rightArrow.png"></button>
     </div>
     <div id="rotateUpDown">
-        <p>Rotate</p>
-        <button id="rotateDown" type="button" class="btn btn-default">Down</button>
-        <button id="rotateUp" type="button" class="btn btn-default">Up</button>
+        <button id="rotateDown" type="button" class="btn btn-default"><img src="images/downArrow.png"></button>
+        <button id="rotateUp" type="button" class="btn btn-default"><img src="images/upArrow.png"></button>
     </div>
     <div id="zoom">
         <p>Zoom</p>
-        <button id="zoomOut" type="button" class="btn btn-default">Out</button>
-        <button id="zoomIn" type="button" class="btn btn-default">In</button>
+        <button id="zoomOut" type="button" class="btn btn-default"><img src="images/minus.png"></button>
+        <button id="zoomIn" type="button" class="btn btn-default"><img src="images/plus.png"></button>
+    </div>
+    <div class="checkbox">
+        <label><input id="rotateCheck" type="checkbox">Auto Rotate</label>
+    </div>
+    <div class="checkbox">
+        <label><input id="wireCheck" type="checkbox">Wireframe</label>
+    </div>
+    <div>
+        <button id="reset" type="button" class="btn btn-default">Reset</button>
     </div>
 </div>
+
+<div id="infoPanel">
+    <h1>Information</h1>
+    <p>
+        A typical example of a great helm, also called pot helm, bucket helm and barrel helm, and is a helmet of the High Middle Ages which arose in the late twelfth century
+        in the context of the Crusades and remained in use until the fourteenth century. They were used by knights and heavy infantry in most European armies between about 1220 to 1540 AD.
+    </p>
+</div>
+
 <div id="WebGL-output">
 
 </div>
