Rearranged rotate buttons

--- a/interface.html
+++ b/interface.html
@@ -22,14 +22,19 @@
 <body>
 
 <div id="buttonControls">
-    <div id="rotateAround">
+    <div id="rotate">
         <p>Rotate</p>
-        <button id="rotateLeft" type="button" class="btn btn-default"><img src="images/leftArrow.png"></button>
-        <button id="rotateRight" type="button" class="btn btn-default"><img src="images/rightArrow.png"></button>
-    </div>
-    <div id="rotateUpDown">
-        <button id="rotateDown" type="button" class="btn btn-default"><img src="images/downArrow.png"></button>
-        <button id="rotateUp" type="button" class="btn btn-default"><img src="images/upArrow.png"></button>
+        <div id="up">
+            <button id="rotateUp" type="button" class="btn btn-default"><img src="images/upArrow.png"></button>
+        </div>
+        <div id="leftRight">
+            <button id="rotateLeft" type="button" class="btn btn-default"><img src="images/leftArrow.png"></button>
+            <button id="rotateRight" type="button" class="btn btn-default"><img src="images/rightArrow.png"></button>
+        </div>
+        <div id="down">
+            <button id="rotateDown" type="button" class="btn btn-default"><img src="images/downArrow.png"></button>
+        </div>
+
     </div>
     <div id="zoom">
         <p>Zoom</p>
