--- a/interface.html
+++ b/interface.html
@@ -12,11 +12,11 @@
     <script type="text/javascript" src="js/baseApp.js?v=0.2"></script>
     <script type="text/javascript" src="js/MTLLoader.js"></script>
     <script type="text/javascript" src="js/OBJMTLLoader.js"></script>
-    <script type="text/javascript" src="js/interface.js?v=0.2"></script>
+    <script type="text/javascript" src="js/interface.js?v=0.3"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css?v=0.1">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css?v=0.1">
-    <link rel="stylesheet" href="css/interfaceStyles.css?v=0.1">
+    <link rel="stylesheet" href="css/interfaceStyles.css?v=0.2">
 
 </head>
 <body>
@@ -57,6 +57,12 @@
     <p>
         A typical example of a great helm, also called pot helm, bucket helm and barrel helm, and is a helmet of the High Middle Ages which arose in the late twelfth century
         in the context of the Crusades and remained in use until the fourteenth century. They were used by knights and heavy infantry in most European armies between about 1220 to 1540 AD.
+    </p>
+</div>
+
+<div id="progress">
+    <p>
+        Please wait while object loads...
     </p>
 </div>
 
